--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
 	</properties>
 	<dependencies>
 
+		
+<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+</dependency>
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
